# hexboard

./: .gitignore  Cargo.toml  README.md
src/: generation.rs  lib.rs
