[package]
name = "hexboard"
version = "0.1.0"
edition = "2021"

[dependencies]
hexgametile = {path = "../hexgametile" }
nannou = "0.18.1"
palette = { version = "0.5", features = [ "named" ]}
rand = "0.8.5"
structopt = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
lazy_static = "1.4"
thiserror = "1.0"
hex2d = "1.1.0"
image = "0.24.5"
itertools = "0.10.5"
